wayland: Avoid updating outputs of a closed window

BUG: 467954